# rag_system

./: .env.example  .gitignore  CLAUDE.md  RAG优化策略全景图.md  README.md  pyproject.toml
config/: aliases.yaml  defaults.yaml  dev.yaml
config/prompts/: compare.yaml  concept.yaml  lookup.yaml  procedure.yaml
docs/superpowers/: finetune-manual.md
docs/superpowers/plans/: 2026-07-12-ingestion-module.md  2026-07-12-model-finetuning-plan.md  2026-07-13-models-module.md  2026-07-13-query-module-plan.md  2026-07-15-code-review-fixes.md  2026-07-15-retrieval-module.md  2026-07-18-generation-module.md  2026-07-20-downloader-modelscope-refactor.md  2026-07-20-react-agent-plan.md  2026-07-22-model-inference-api.md  2026-07-23-local-llm-inference.md
docs/superpowers/reports/: 2026-07-12-ingestion-module-report.md
docs/superpowers/specs/: 2026-07-09-rag-enterprise-qa-design.md  2026-07-12-ingestion-module-design.md  2026-07-12-model-finetuning-design.md  2026-07-13-query-module-design.md  2026-07-15-retrieval-design.md  2026-07-19-mineru-parser-design.md  2026-07-20-downloader-modelscope-refactor-design.md  2026-07-20-react-agent-design.md  2026-07-22-examples-refactor-design.md  2026-07-22-model-inference-api-design.md  2026-07-23-local-llm-inference-design.md
examples/: README.md  _common.py  _llm.py
examples/01_config/: 01_basic_access.py  02_overrides_env.py  demo_config.py
examples/02_security/: 01_secret_crypto.py  02_secrets_storage.py  demo_security.py
examples/03_logger/: 01_basic_logging.py  02_performance.py  03_data_masking.py  demo_logger.py
examples/04_models/: 01_enums_context.py  02_chunk_document.py  03_session_api.py  demo_models.py
examples/05_session/: 01_crud.py  02_context_lifecycle.py  demo_session.py
examples/06_model/: 01_status_download.py  02_finetune.py  demo_model.py
examples/07_query/: 01_alias_intent.py  02_fusion_rewrite.py  03_full_pipeline.py  demo_query.py
examples/08_retrieval/: 01_architecture.py  02_retrieve_demo.py  demo_retrieval.py
examples/09_generation/: 01_assembly_route.py  02_generate_factcheck.py  demo_generation.py
examples/10_core/: 01_single_multi_turn.py  02_edge_cases.py  demo_core.py
examples/11_ingestion/: 01_document_parsing.py  01_markdown_parsing.py  01_parse_chunk.py  02_chunking_strategies.py  02_pdf_parsing.py  02_pipeline_index.py  03_chunking_strategies.py  03_full_pipeline.py  04_full_pipeline.py  demo_ingestion.py
examples/12_fallback/: 01_web_search.py  02_fallback_flow.py  demo_fallback.py
examples/13_agent/: 01_tools.py  02_react_loop.py  demo_agent.py
scripts/: __main__.py  _common.py  download_models.py  encrypt_env.py  generate_key.py  parse_mineru.py  setup.py  start_server.py
src/agent/: README.md  __init__.py  react_agent.py  tools.py
src/api/: main.py
src/config/: README.md  __init__.py  aliases.py  path.py  settings.py  yaml_loader.py
src/core/: README.md  __init__.py  fallback.py  pipeline.py
src/fallback/: README.md  __init__.py  handler.py  supplementary.py  web_search.py
src/generation/: README.md  __init__.py  citation_builder.py  fact_checker.py  layer.py  llm_router.py  prompt_assembler.py
src/ingestion/: README.md  __init__.py  __main__.py  chunker.py  context.py  embedder.py  indexer.py  parser.py  pipeline.py  stage.py
src/ingestion/parsers/: __init__.py  base.py  direct_parser.py  docling_parser.py  mineru_parser.py  pymupdf4llm_parser.py
src/logger/: README.md  __init__.py  core.py  filters.py  formatters.py  handlers.py  helpers.py  lazy.py  masking.py  metrics.py
src/model/: README.md  __init__.py  downloader.py  inference.py  llm_adapter.py  manager.py
src/model/finetune/: __main__.py  aliases.py  base.py  cli.py  config.py  data.py  embedding_trainer.py  llm_trainer.py  reranker_trainer.py
src/model/proxy/: __init__.py  __main__.py  models.py  server.py
src/models/: README.md  __init__.py  api.py  chunk.py  context.py  document.py  enums.py  json_utils.py  llm.py  react_trace.py  session.py
src/query/: README.md  __init__.py  aliases.py  context_fuser.py  intent_classifier.py  layer.py
src/query/rewriters/: __init__.py  base.py  hyde.py  keyword.py  keyword_rewriter.py  synonym.py
src/retrieval/: README.md  __init__.py  bm25_retriever.py  evaluator.py  expander.py  fusion.py  layer.py  reranker.py  store.py  vector_retriever.py
src/security/: README.md  __init__.py  __main__.py  env_encryptor.py  secret_str.py  secrets_manager.py  secure_env_loader.py
src/session/: README.md  __init__.py  manager.py  store.py
src/utils/: README.md  __init__.py  json_utils.py
tests/unit/agent/: conftest.py  test_init.py  test_output_parser.py  test_react_agent.py  test_tools.py
tests/unit/config/: test_aliases.py  test_retrieval_config.py  test_settings.py  test_yaml_loader.py
tests/unit/core/: test_fallback.py  test_init.py  test_pipeline.py  test_pipeline_react.py
tests/unit/fallback/: test_handler.py  test_supplementary.py  test_web_search.py
tests/unit/generation/: conftest.py  test_citation_builder.py  test_config.py  test_fact_checker.py  test_init.py  test_layer.py  test_llm_router.py  test_prompt_assembler.py
tests/unit/ingestion/: test_chunker.py  test_context.py  test_embedder.py  test_indexer.py  test_init.py  test_mineru_parser.py  test_parser.py  test_pipeline.py  test_stage.py
tests/unit/logger/: test_core.py  test_filters_formatters.py
tests/unit/model/: test_downloader.py  test_finetune_base.py  test_finetune_cli.py  test_finetune_config.py  test_finetune_data.py  test_finetune_embedding_trainer.py  test_finetune_llm_trainer.py  test_finetune_manager.py  test_finetune_reranker_trainer.py  test_inference.py  test_llm_adapter.py  test_proxy.py
tests/unit/models/: test_api.py  test_chunk.py  test_context.py  test_document.py  test_enums.py  test_json_utils.py  test_react_trace.py  test_session.py
tests/unit/query/: conftest.py  test_aliases.py  test_context_fuser.py  test_init.py  test_intent_classifier.py  test_layer.py
tests/unit/retrieval/: conftest.py  test_bm25_retriever.py  test_evaluator.py  test_expander.py  (+5 more)
(+13 files in other folders)
