[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-service"
version = "0.1.0"
description = "企业级 RAG 知识库问答系统中台"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "RAG Team" },
]

# ---- 核心依赖（在线 Pipeline 必需） ---------------------------------
dependencies = [
    # API 框架
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",

    # RAG 编排
    "langchain>1.3.0",
    "langgraph>=1.2.0",

    # 配置 & 安全
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "cryptography>=43.0",

    # 向量数据库（第一期 FAISS，后续迁移 Milvus）
    "faiss-cpu>=1.9",

    # 会话存储
    "sqlalchemy>=2.0",

    # 模型下载
    "huggingface_hub>=0.26",
]

# ---- 可选依赖分组 ---------------------------------------------------
[project.optional-dependencies]
# 检索增强：Embedding + Reranker + BM25
retrieval = [
    "sentence-transformers>=3.3",
    "FlagEmbedding>=1.3",
    "rank-bm25>=0.2",
    "jieba>=0.42",
]

# 离线文档处理 Pipeline（异步）
ingestion = [
    "arq>=0.26",                # 轻量异步任务队列（预留）
    "docling>=2.0",             # 多格式文档解析（PDF/Word/PPT/HTML/Markdown）
    "Pillow>=10.0",             # 图片处理（预留 MultiModalStage）
]

# 开发 & 测试
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "ruff>=0.8",
]

# 微调（LoRA / 蒸馏 / 全量微调）
finetune = [
    "peft>=0.12.0",
    "datasets>=2.19.0",
    "accelerate>=0.30.0",
]

# 全部依赖
all = [
    "rag-service[retrieval,ingestion,dev,finetune]",
]

# ---- CLI 入口（后续随模块实现逐步添加） --------------------------------
[project.scripts]
rag-download = "model.downloader:main"
rag-finetune = "model.finetune.cli:main"
rag-ingest = "ingestion.__main__:main"

# ---- setuptools 包发现 ----------------------------------------------
[tool.setuptools.packages.find]
where = ["src"]

# ---- Ruff（代码检查 & 格式化）----------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",       # pycodestyle errors
    "F",       # pyflakes
    "I",       # isort (import order)
    "N",       # pep8-naming
    "UP",      # pyupgrade
    "B",       # flake8-bugbear
    "SIM",     # flake8-simplify
    "RUF",     # ruff-specific rules
]
ignore = [
    "E501",    # line-too-long (handled by formatter)
    "B008",    # do-not-perform-function-calls-in-default-types
    "RUF001",  # Chinese fullwidth punctuation in strings is intentional
    "RUF002",  # Chinese fullwidth punctuation in docstrings is intentional
    "RUF003",  # Chinese fullwidth punctuation in comments is intentional
]

[tool.ruff.lint.isort]
known-first-party = ["config", "logger", "security", "model", "models", "ingestion", "retrieval", "generation"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

# ---- pytest ---------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["src"]
addopts = "-v --tb=short"
